--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -e",
-      "pre-commit": "lint-staged && npx tsc"
+      "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
