--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,11 +37,7 @@ jobs:
         run: |
           git config user.name "GitHub Actions"
           git config user.email "github@example.com"
-          git add assets/main.js
-          git commit -m "Updated JavaScript build"
-          git push
-      - name: Publish to GitHub pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+          git diff-index --quiet HEAD assets/main.js \
+            && git add assets/main.js \
+            && git commit -m "Updated JavaScript build" \
+            && git push
