--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -35,8 +35,9 @@ jobs:
         run: npm run build
       - name: Commit build
         run: |
+          echo "machine github.com login coderbyheart password ${GITHUB_TOKEN}" > ~/.netrc
+          git config user.email "actions@example.com"
           git config user.name "GitHub Actions"
-          git config user.email "github@example.com"
           CHANGED=$(git diff-index --name-only HEAD -- assets/main.js)
           if [ -n "$CHANGED" ]; then
               git add assets/main.js
