fix: update dependencies

--- a/package.json
+++ b/package.json
@@ -23,31 +23,31 @@
   },
   "homepage": "https://github.com/coderbyheart/ew20.world.thingy.rocks#readme",
   "dependencies": {
-    "@bifravst/rsrp-bar": "^2.0.0",
-    "@types/react-dom": "^16.9.5",
+    "@bifravst/rsrp-bar": "^2.0.2",
+    "@types/react-dom": "^16.9.6",
     "feather-icons": "^4.26.0",
     "leaflet": "^1.6.0",
-    "mcc-mnc-list": "git+https://github.com/bifravst/mcc-mnc-list.git#add-typescript-declarations",
-    "nmea-simple": "^3.0.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-leaflet": "^2.6.2"
+    "mcc-mnc-list": "^1.1.1",
+    "nmea-simple": "^3.1.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-leaflet": "^2.6.3"
   },
   "devDependencies": {
-    "@bifravst/code-style": "^6.0.5",
+    "@bifravst/code-style": "^7.0.4",
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-angular": "^8.3.4",
-    "@svgr/webpack": "^5.2.0",
-    "@types/react": "^16.9.22",
-    "@types/react-leaflet": "^2.5.0",
+    "@svgr/webpack": "^5.3.0",
+    "@types/react": "^16.9.32",
+    "@types/react-leaflet": "^2.5.1",
     "@types/styled-components": "^5.0.0",
     "husky": "^4.2.3",
     "react-svg-loader": "^3.0.3",
     "source-map-loader": "^0.2.4",
     "styled-components": "^5.0.1",
-    "ts-loader": "^6.2.1",
-    "typescript": "^3.8.2",
-    "webpack": "^4.41.6",
+    "ts-loader": "^6.2.2",
+    "typescript": "^3.8.3",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.2"
   },
